<resources>
    <string name="app_name">Jamali Parenting</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Kata Sandi</string>
    <string name="register">Daftar</string>
    <string name="to_login"><u>Daftar</u></string>
    <string name="not_account">Belum memiliki akun?</string>
    <string name="to_register"><u>Masuk</u></string>
    <string name="title_register">Registrasi</string>
    <string name="title_login">Masuk</string>
    <string name="login">Masuk</string>
    <string name="required">Tidak Boleh Kosong</string>
    <string name="title">Judul Postingan</string>
    <string name="desc">Deskripsi Potingan</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_consultation">Message</string>
    <string name="menu_profile">Profil</string>
    <string name="title_profile">Profil</string>
    <string name="title_consultation_activity">Pesan</string>
    <string name="profileTxt">Profil</string>
    <string name="chatTxt">Konsultasi</string>
    <string name="forumTxt">Forum</string>
    <string name="homeTxt">Modul</string>
    <string name="failed_get_name">Gagal memuat nama pengguna</string>
    <string name="title_upload_new_forum">Unggah Forum Baru</string>
    <string name="tab_1">Personal</string>
    <string name="tab_2">Komunitas</string>
    <string name="dummy_desc_detail">Program parenting adalah program pendidikan yang diberikan kepada orang tua agar pengetahuan yang dimiliki orang tua menjadi bertambah tentang tumbuh kembang anak serta agar pendidikan yang diperoleh anak selaras antara dirumah dan disekolah</string>

    <string name="error_no_network">Tidak Ada Jaringan Sinyal Saat Ini</string>
    <string name="error_timeout">Permintaan melebihi batas waktu, harap coba lagi</string>
    <string name="error_network">Terkendala koneksi, harap periksa jaringan anda</string>
    <string name="error_general">Terjadi Error</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor augue, varius quis dolor et, ornare ullamcorper diam. Pellentesque eu enim ac neque vestibulum tristique ac in lacus. Pellentesque eros magna, porta volutpat purus non</string>
    <string name="leave_a_comment">Berikan Komentar</string>
    <string name="post">Kirim Komentar</string>
    <string name="head_topic">Pembahasan</string>
    <string name="comment">Komentar</string>

    <string name="insert_comment">Tambahkan sebuah komentar</string>
    <string name="changeProfile">Ubah Profil</string>
    <string name="changePassword">Ubah Kata Sandi</string>
    <string name="forgetPassword">Lupa Kata Sandi</string>
    <string name="forget_pass"><u>Lupa Kata Sandi?</u></string>
    <string name="message_deleted">Pesan Telah Dihapus</string>
    <string name="termsCondition">Pastikan untuk membuat postingan yang sopan dan santun dan mengikuti aturan komunitas kami</string>
    <string name="communityRule">Aturan Komunitas</string>
    <string name="commentRules">Harap berkomentar dengan sopan, tidak mengandung unsur sara, dan menghormati sesama pengguna mengikuti aturan komunitas kami.</string>
    <string name="privacyPolicy">Kebijakan Privasi</string>
    <string name="consultationRule">Pastikan untuk melakukan konsultasi yang sopan dan santun sesuai dengan aturan komunitas kami</string>
    <string name="privacyPolicyText">Kebijakan Privasi</string>
    <string name="termsOfServiceText">Ketentuan Layanan</string>
    <string name="postforum">Unggah Forum</string>
    <string name="placeholder_desc_doctor">Pakar belum mengatur deskripsi tentang dirinya</string>
    <string name="placeholder_schedule_doctor">Pakar belum mengatur jadwal aktif</string>
    <string name="sendVerifText">Kami akan mengirimkan kode verifikasi ke ponsel Anda</string>
    <string name="login_phone_text">No.Telp</string>

    <string name="user_login">Masuk sebagai Pengguna</string>
    <string name="expert_login">Masuk sebagai Pakar</string>
    <string name="send_verif_text">Kirim Kode Verifikasi</string>
    <string name="verifikasi_text">Verifikasi</string>
    <string name="nomor_telepon_text">Nomor Telepon</string>

    <string name="phone_number_prefix">+62%1$s</string>
    <string name="resend_otp_countdown">Kirim Ulang Kode (%1$ds)</string>
    <string name="resendCodeText">Kirim Ulang Kode</string>
    <string name="default_number">+62</string>
    <string name="login_email_text">Email</string>
    <string name="login_phone_title">Masuk dengan Nomor Telepon</string>
    <string name="have_account">Sudah Memiliki Akun?</string>
    <string name="not_registered">Tidak terdaftar</string>
    <string name="jumlah_posting">%1$s Postingan</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_report">Manajemen Laporan</string>
    <string name="menu_monitor">Monitoring Pengguna</string>
    <string name="menu_add_doctor">Manajemen Pakar</string>
    <string name="jumlah_laporan_text">Jumlah Laporan: %1$s</string>
    <string name="delete_post_text">Hapus Postingan</string>
    <string name="delete_comment_text">Hapus Komentar</string>
    <string name="delete_user_text">Hapus Pengguna</string>
    <string name="reported_content_text">konten yang di laporkan :\n%1$s</string>
    <string name="show_content_reported"><u>Lihat Konten yang Dilaporkan</u></string>
    <string name="detail_post_reported">Postingan yang Dilaporkan</string>
    <string name="detail_comment_reported">Komentar yang Dilaporkan</string>
    <string name="konsultasi_text">Konsultasi</string>
    <string name="empty_rv_consultation_customer">Belum Ada Ahli yang Aktif</string>
    <string name="konsultasi_doctor_text">Konsultasi Pengguna</string>
    <string name="empty_rv_consultation_doctor">Belum Ada Pelanggan yang melakukan konsultasi</string>
    <string name="note_change_password">*Catatan: Fitur ubah kata sandi hanya tersedia untuk pengguna yang masuk menggunakan email</string>
    <string name="no_file_selected">Belum Ada File Terpilih</string>
    <string name="menu_management_module">Manajemen Modul</string>
    <string name="no_module_text">Belum Ada Modul Untuk Saat Ini</string>
    <string name="tanggal_modul">Edisi : %1$s</string>
    <string name="add_module_text">Mengunggah Modul…</string>
    <string name="loading_module_text">Memuat Modul…</string>
</resources>