<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/container_menu" >
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/navigation_forum"
            android:icon="@drawable/ic_people_alt"
            android:title="@string/menu_forum" />

        <item
            android:id="@+id/navigation_message"
            android:icon="@drawable/ic_message"
            android:title="@string/menu_consultation" />

        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>

</menu>