<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_monitor"
            android:icon="@drawable/ic_monitor"
            android:title="@string/menu_monitor" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_management_doctor"
            android:icon="@drawable/ic_person_add"
            android:title="@string/menu_add_doctor" />
        <item
            android:id="@+id/nav_management_module_list"
            android:icon="@drawable/ic_module"
            android:title="@string/menu_management_module" />

    </group>
</menu>