<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jamali.eparenting.ui.home.fragments.home.HomeFragment"
        android:label="@string/homeTxt"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.jamali.eparenting.ui.home.fragments.community.CommunityFragment"
        android:label="@string/communityTxt"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.jamali.eparenting.ui.home.fragments.consultation.ChatFragment"
        android:label="@string/chatTxt"
        tools:layout="@layout/fragment_consultation" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.jamali.eparenting.ui.home.fragments.profile.ProfileFragment"
        android:label="@string/profileTxt"
        tools:layout="@layout/fragment_profile" />
</navigation>